Sun Apr 01 13:19:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* queryparser/queryparser.cc: Fix Assert() on a RefCountPtr to
	  check the value of the pointer, to fix compile with asserts
	  turned on.

Sun Apr 01 12:57:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* common/safewinsock2.h: Define socklen_t under MS compiler (since
	  Olly reported build success with mingw, presumably it's not
	  needed there).

Sun Apr 01 06:42:14 BST 2007  Olly Betts <olly@survex.com>

	* languages/Makefile.mk: $(snowball_algorithms:.sbl=.cc) is portable
	  according to the automake list so use that so we only need to list
	  the .sbl sources.

Sun Apr 01 05:53:29 BST 2007  Olly Betts <olly@survex.com>

	* common/tcpserver.h,net/tcpserver.cc: TcpServer's port member
	  variable is set but never used so remove it.

Sun Apr 01 03:27:30 BST 2007  Olly Betts <olly@survex.com>

	* bin/Makefile.mk,examples/Makefile.mk: Add $(EXEEXT) to dependency on
	  binaries in man page generation rules so they work on Windows.

Sat Mar 31 22:17:55 BST 2007  Olly Betts <olly@survex.com>

	* common/multimatch.h,matcher/multimatch.cc: When using a MatchDecider
	  with remote database(s), don't rerun the MatchDecider on documents
	  which a remote server has already checked.

Sat Mar 31 10:44:26 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.cc: Sort out path to xapian-tcpsrv
	  under mingw.  If neither HAVE_FORK nor __WIN32__ is defined,
	  make compilation fail with a suitable #error.

Sat Mar 31 10:17:06 BST 2007  Olly Betts <olly@survex.com>

	* api/Makefile,backends/Makefile,backends/flint/Makefile,
	  backends/inmemory/Makefile,backends/multi/Makefile,
	  backends/quartz/Makefile,backends/remote/Makefile,bin/Makefile,
	  common/Makefile,examples/Makefile,getopt/Makefile,include/Makefile,
	  languages/Makefile,matcher/Makefile,net/Makefile,
	  queryparser/Makefile,tests/harness/Makefile: Don't pass $(MAKEFLAGS)